# NetDout

./: Cargo.toml  README.md
docs/: architecture.md
extension/: background.js  content.js  manifest.json
extension/options/: options.html  options.js
extension/popup/: popup.html  popup.js
src/: cli.rs  config.rs  lib.rs  main.rs  models.rs
src/api/: mod.rs
src/db/: mod.rs
src/download/: mod.rs
src/network/: mod.rs
src/scheduler/: mod.rs
