[package]
name = "netdout"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Open-source multi-thread download manager daemon + extension bridge"

[dependencies]
anyhow = "1"
axum = { version = "0.7", features = ["macros"] }
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
